# phi

./: Cargo.toml  README.md  SECURITY.md
.github/workflows/: ci.yml
crates/nex-consensus/: Cargo.toml
crates/nex-consensus/src/: lib.rs
crates/nex-crypto/: Cargo.toml
crates/nex-crypto/src/: lib.rs
crates/nex-executor/: Cargo.toml
crates/nex-executor/src/: lib.rs
crates/nex-mempool/: Cargo.toml
crates/nex-mempool/src/: lib.rs
crates/nex-sim/: Cargo.toml
crates/nex-sim/src/: main.rs
crates/nex-state/: Cargo.toml
crates/nex-state/src/: lib.rs  smt.rs
crates/nex-types/: Cargo.toml
crates/nex-types/src/: account.rs  block.rs  lib.rs  merkle.rs  transaction.rs
crates/phi-cargo/: Cargo.toml
crates/phi-cargo/src/: lib.rs
crates/phi-consensus/: Cargo.toml
crates/phi-consensus/src/: lib.rs
crates/phi-crypto/: Cargo.toml
crates/phi-crypto/src/: lib.rs
crates/phi-executor/: Cargo.toml
crates/phi-executor/src/: lib.rs
crates/phi-interop/: Cargo.toml
crates/phi-interop/src/: bft.rs  bridge.rs  lib.rs  light_client.rs  pow.rs
crates/phi-mempool/: Cargo.toml
crates/phi-mempool/src/: lib.rs
crates/phi-node/: Cargo.toml
crates/phi-node/src/: lib.rs  main.rs
crates/phi-sim/: Cargo.toml
crates/phi-sim/src/: main.rs
crates/phi-state/: Cargo.toml
crates/phi-state/src/: lib.rs  smt.rs
crates/phi-types/: Cargo.toml
crates/phi-types/src/: account.rs  block.rs  hash.rs  lib.rs  merkle.rs  transaction.rs
crates/phi-vm/: Cargo.toml
crates/phi-vm/src/: asm.rs  contract.rs  examples.rs  instr.rs  lib.rs  vm.rs
docs/: ARCHITECTURE.md  ROADMAP.md  SPECIFICATION.md
