[workspace]
resolver = "2"
members = [
    "crates/phi-types",
    "crates/phi-state",
    "crates/phi-mempool",
    "crates/phi-consensus",
    "crates/phi-sim",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
blake3 = "1.5"
phi-types = { path = "crates/phi-types" }
phi-state = { path = "crates/phi-state" }
phi-mempool = { path = "crates/phi-mempool" }
phi-consensus = { path = "crates/phi-consensus" }
