[workspace]
resolver = "2"
members = [
    "crates/nex-crypto",
    "crates/nex-types",
    "crates/nex-state",
    "crates/nex-executor",
    "crates/nex-mempool",
    "crates/nex-consensus",
    "crates/nex-sim",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
blake3 = "1.5"
ed25519-dalek = "2"
nex-crypto = { path = "crates/nex-crypto" }
nex-types = { path = "crates/nex-types" }
nex-state = { path = "crates/nex-state" }
nex-executor = { path = "crates/nex-executor" }
nex-mempool = { path = "crates/nex-mempool" }
nex-consensus = { path = "crates/nex-consensus" }

# Crypto and hashing are hot paths even in debug test runs (the SMT hashes
# O(accounts * 256) nodes per root); optimize dependencies only.
[profile.dev.package."*"]
opt-level = 2
