[workspace]
resolver = "2"
members = [
    "crates/phi-cargo",
    "crates/phi-crypto",
    "crates/phi-types",
    "crates/phi-state",
    "crates/phi-executor",
    "crates/phi-mempool",
    "crates/phi-consensus",
    "crates/phi-sim",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
blake3 = "1.5"
ed25519-dalek = "2"
phi-cargo = { path = "crates/phi-cargo" }
phi-crypto = { path = "crates/phi-crypto" }
phi-types = { path = "crates/phi-types" }
phi-state = { path = "crates/phi-state" }
phi-executor = { path = "crates/phi-executor" }
phi-mempool = { path = "crates/phi-mempool" }
phi-consensus = { path = "crates/phi-consensus" }

# Crypto and hashing are hot paths even in debug test runs (the SMT hashes
# O(accounts * 256) nodes per root); optimize dependencies only.
[profile.dev.package."*"]
opt-level = 2
