[package]
name = "nex-sim"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
nex-types = { workspace = true }
nex-state = { workspace = true }
nex-mempool = { workspace = true }
nex-consensus = { workspace = true }

[[bin]]
name = "nex-sim"
path = "src/main.rs"
