[package]
name = "nex-sim"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "NexChain local simulation: signed transactions, BFT rounds, Byzantine faults, light-client audit"

[dependencies]
nex-crypto = { workspace = true }
nex-types = { workspace = true }
nex-state = { workspace = true }
nex-executor = { workspace = true }
nex-mempool = { workspace = true }
nex-consensus = { workspace = true }

[[bin]]
name = "nex-sim"
path = "src/main.rs"
