[package]
name = "nex-state"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "NexChain state machine: SMT-committed account store and deterministic state transition"

[dependencies]
nex-types = { workspace = true }

[dev-dependencies]
nex-crypto = { workspace = true }
