[package]
name = "phi-mempool"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Phi mempool: admission control, free-lane quotas, batch selection"

[dependencies]
phi-types = { workspace = true }
phi-state = { workspace = true }

[dev-dependencies]
phi-crypto = { workspace = true }
