[package]
name = "phi-sim"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Phi local simulation: signed transactions, BFT rounds, Byzantine faults, light-client audit"

[dependencies]
phi-crypto = { workspace = true }
phi-types = { workspace = true }
phi-state = { workspace = true }
phi-executor = { workspace = true }
phi-cargo = { workspace = true }
phi-mempool = { workspace = true }
phi-consensus = { workspace = true }
phi-interop = { workspace = true }

[[bin]]
name = "phi-sim"
path = "src/main.rs"
